[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/hud_weapon_frames.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/hud_weapons/hud_pistol.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/hud_weapon_pointer.png" type="Texture" id=4]
[ext_resource path="res://assets/PressStart2P-vaV7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/hud_player_lives_icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_right = 6.10352e-05
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 960.0
margin_bottom = 40.0
grow_horizontal = 2
custom_constants/separation = 64
alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 116.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="Weapons" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 580.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )

[node name="Frames" type="TextureRect" parent="MarginContainer/HBoxContainer/Weapons"]
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon1" type="TextureRect" parent="MarginContainer/HBoxContainer/Weapons"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon2" type="TextureRect" parent="MarginContainer/HBoxContainer/Weapons"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="TextureRect" parent="MarginContainer/HBoxContainer/Weapons"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 644.0
margin_right = 844.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="XLabel" type="Label" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 52.0
margin_top = 4.0
margin_right = 68.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = SubResource( 2 )
text = "X"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 72.0
margin_top = 4.0
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 64, 0 )
custom_fonts/font = SubResource( 3 )
text = "null"
valign = 1
__meta__ = {
"_editor_description_": ""
}
